--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,4 +1,4 @@
-\thesistitle{Title of the Thesis}
+\thesistitle{Usage of Kernel Smoothing in Generalized Additive Models for Disease Mapping with Individual-level Point-referenced Data: Stratified Smoothers and Generalized Additive Mixed Models}
 
 %"Dissertation" for PhD, "Thesis" for master's
 \documenttitle{Dissertation}
@@ -14,14 +14,15 @@
 
 % Use the full name of each committee member and full title 
 % (e.g. Professor/Associate Professor).
-\committeechair{Professor A}
+\committeechair{Professor Daniel L. Gillen}
 \othercommitteemembers
 {
-  Assistant Professor B\\
-  Associate Professor C
+  Professor Michele Guindani\\
+  Professor Veronica M. Vieira\\
+  Professor Scott M. Bartell
 }
 
-\degreeyear{2012}
+\degreeyear{2020}
 
 \copyrightdeclaration
 {
@@ -38,45 +39,44 @@
 % 	All other materials {\copyright} {\Degreeyear} \Authorname
 % }
 
-% The dedication page is optional
-% (comment out to exclude).
-\dedications
-{
-  (Optional dedication page)
-  
-  To ...
-}
+%% The dedication page is optional
+%% (comment out to exclude).
+%\dedications
+%{
+%  (Optional dedication page)
+%  
+%  To ...
+%}
 
 \acknowledgments
 {
-  I would like to thank...
-  
-  (You must acknowledge grants and other funding assistance. 
-  
-  You may also acknowledge the contributions of professors and
-  friends.
-  
-  You also need to acknowledge any publishers of your previous
-  work who have given you permission to incorporate that work
-  into your dissertation. See Section 3.2 of the UCI Thesis and
-  Dissertation Manual.)
+%  I wish to thank my dissertation committee members, Professor Michele Guindani, Professor Veronica Vieira and Professor Scott Bartell for the dedicated time, efforts and thoughts on the research work and thesis preparation. 
+%  
+%  I would like to thank my advisor, Professor Daniel Gillen. I have learnt enormously from him about what a Ph.D. degree is, how research work should preceed and what a decent work should look like. He has been so supportive that I somehow believe, and still so, that I could turn to him for help anytime on anything, including but not limited to background knowledge, research ideas, funs to have, beer to enjoy and how to live a phenomenal life.
+ 
+%  I am much grateful to our collaborators, Professor Veronica Vieira and Professor Scott Bartell, for their generous support, inspiring inputs and bright encouragements. Thanks to Professor Vieira, my dissertation work is supported by the NIH grant, NIEHS P42ES007381.
+%  
+%  The department of statistics, UCI is a treasure to me, with no doubts. I always feel luck to be a part of it. I got many advices and thoughts from the faculty members and the students here are the ones you call best friends. Sometimes I wonder how this magic department always manage to hire and admit these top-tier people. 
+%  
+%  Last but not least, I want to thank my parents, who have been supporting me for 29 years and surprisingly, there is no clear sign that they will stop doing that. A special nominee is given to Miss ZW. Things didn't work out but you might never escape my memory about this beautiful city. 
+
+I would like to thank ...
 }
 
-
-% Some custom commands for your list of publications and software.
-\newcommand{\mypubentry}[3]{
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}p{4.5in}r}
-    \textbf{#1} & \textbf{#2} \\ 
-    \multicolumn{2}{@{\extracolsep{\fill}}p{.95\textwidth}}{#3}\vspace{6pt} \\
-  \end{tabular*}
-}
-\newcommand{\mysoftentry}[3]{
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{#1} & \url{#2} \\
-    \multicolumn{2}{@{\extracolsep{\fill}}p{.95\textwidth}}
-    {\emph{#3}}\vspace{-6pt} \\
-  \end{tabular*}
-}
+%% Some custom commands for your list of publications and software.
+%\newcommand{\mypubentry}[3]{
+%  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}p{4.5in}r}
+%    \textbf{#1} & \textbf{#2} \\ 
+%    \multicolumn{2}{@{\extracolsep{\fill}}p{.95\textwidth}}{#3}\vspace{6pt} \\
+%  \end{tabular*}
+%}
+%\newcommand{\mysoftentry}[3]{
+%  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
+%    \textbf{#1} & \url{#2} \\
+%    \multicolumn{2}{@{\extracolsep{\fill}}p{.95\textwidth}}
+%    {\emph{#3}}\vspace{-6pt} \\
+%  \end{tabular*}
+%}
 
 % Include, at minimum, a listing of your degrees and educational
 % achievements with dates and the school where the degrees were
@@ -88,54 +88,80 @@
 % comment out to exclude
 \curriculumvitae
 {
+	\textbf{EDUCATION} \hrule
+	{\bf University of California, Irvine} \hfill {\bf Irvine, CA, USA}\\
+	{\em Ph.D. in Statistics}\hfill {\em 2015 - 2020} \\
+	Dissertation Advisor: Professor Daniel L. Gillen
+	
+	{\bf The George Washington University} \hfill {\bf Washington, DC, USA} \\
+	{\em M.S. in Statistics} \hfill {\em 2013 - 2015}
+	
+	{\bf Tsinghua University} \hfill {\bf Beijing, China} \\
+	{\em B.E. in Civil Engineering} \hfill {\em 2008 - 2012}
 
-\textbf{EDUCATION}
-  
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Doctor of Philosophy in Computer Science} & \textbf{2012} \\
-    \vspace{6pt}
-    University name & \emph{City, State} \\
-    \textbf{Bachelor of Science in Computational Sciences} & \textbf{2007} \\
-    \vspace{6pt}
-    Another university name & \emph{City, State} \\
-  \end{tabular*}
+	\vspace{12pt}
+	\textbf{PUBLICATIONS}  \hrule
+	\vspace{-0.15 in}
+	\begin{itemize} \setlength{\itemsep}{2pt}  \setlength{\parskip}{0pt}
+		\item {\textbf{Tang Y.}, Vieira V., Bartell S. and Gillen D., ``A Stratified Generalized Additive Model and Permutation Test for Temporal Heterogeneity of Smoothed Bivariate Spatial Effects"} (revised and submitted to \textit{Statistics in Medicine}) 
+		\item \textbf{Tang Y.}, Vieira V., Bartell S. and Gillen D., ``Additive Mixed Models with Kernel Smoothers for Disease Mapping Using Individual-level Data" (Submitted)
+		\item {\textbf{Tang Y.}, Vieira V., Bartell S. and Gillen D., ``Disease Mapping using Generalized Additive Mixed Models with Kernel Smoothers"} (To submit)
+	\end{itemize}
 
-\vspace{12pt}
-\textbf{RESEARCH EXPERIENCE}
+	\vspace{12pt}
+	\textbf{COLLABORATIVE RESEARCH} \hrule %{Collaborative Research}
+	\vspace{-0.15 in}
+	\begin{itemize} \setlength{\itemsep}{2pt}  \setlength{\parskip}{0pt}
+		\item {Spatio-temporal analysis of birth defects and infant morbidity in relation to air pollution using generalized additive models (GAM) in a geographic framework} \\
+		{\em Grant Funding Number: P42ES007381, NIEHS Grant, NIH\\
+			PI: Veronica Vieira, D.Sc., Professor of Public Health, UC Irvine \\
+			Role: Research Assistant}
+		\item Leveraging external data for regulatory decision making using propensity scores, with application in label expansion for multiple medical devices \\
+		{\em Sponsor: Allergan plc \\
+			Supervisor: Jingyuan Yang, Ph.D., Director, Biostatistics, Allergan plc}
+	\end{itemize}
 
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Graduate Research Assistant} & \textbf{2007--2012} \\
-    \vspace{6pt}
-    University of California, Irvine & \emph{Irvine, California} \\
-  \end{tabular*}
+	\pagebreak
 
-\vspace{12pt}
-\textbf{TEACHING EXPERIENCE}
+	\vspace{12pt}
+	\textbf{TEACHING EXPERIENCE} \hrule 
+	
+	{\bf University of California, Irvine \hfill  Irvine, CA, USA} \\
+	{\em Tutor for Ph.D. qualification exams\hfill 2017 - 2019}
+	
+	{\bf University of California, Irvine\hfill  Irvine, CA, USA}  \\
+	{\em Teaching Assistant, Reader}\hfill {\em 2015 - 2019}
 
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    \textbf{Teaching Assistant} & \textbf{2009--2010} \\
-    \vspace{6pt}
-    University name & \emph{City, State} \\
-  \end{tabular*}
+	\vspace{12pt}
+	\textbf{\uppercase{CONTRIBUTED Presentations at Academic Meetings}} \hrule 
+	\vspace{-0.15 in}
+	\begin{itemize} \setlength{\itemsep}{2pt}  \setlength{\parskip}{0pt}
+		\item 13th International Conference on Health Policy Statistics, ``An Additive Linear Mixed-effects Model (ALMM) with Kernel Smoothers and a Permutation Test on Temporal Heterogeneity of Geospatial Risk Patterns" (San Diego, CA, USA; JAN 2020)
+		\item Joint Statistical Meetings of the ASA, ``Time-Stratified LOESS Smoothers for Estimating and Testing Temporal Heterogeneity in Spatial Risk Patterns" (Vancouver, Canada; JUL 2018)
+	\end{itemize}
 
-\pagebreak
+	\vspace{12pt}
+	\textbf{\uppercase{Professional memberships}} \hrule 
+	\vspace{-0.15 in}
+	\begin{itemize} \setlength{\itemsep}{2pt}  \setlength{\parskip}{0pt}
+		\item American Statistical Association (2017-present)
+		\item International Chinese Statistical Association (2018-present)
+	\end{itemize}
 
-\textbf{REFEREED JOURNAL PUBLICATIONS}
 
-  \mypubentry{Ground-breaking article}{2012}{Journal name}
+	\vspace{12pt}
+	\textbf{\uppercase{Department service}} \hrule 
+	
+	{\bf Department of Statistics\hfill UC Irvine}  \\
+	{\em Graduate Student Representative (elected)}\hfill {\em 2017 - 2018}
 
-\vspace{12pt}
-\textbf{REFEREED CONFERENCE PUBLICATIONS}
-
-  \mypubentry{Awesome paper}{Jun 2011}{Conference name}
-  \mypubentry{Another awesome paper}{Aug 2012}{Conference name}
-
-\vspace{12pt}
-\textbf{SOFTWARE}
-
-  \mysoftentry{Magical tool}{http://your.url.here/}
-  {C++ algorithm that solves TSP in polynomial time.}
-
+	\vspace{12pt}
+	\textbf{\uppercase{Awards}} \hrule 
+	\vspace{-0.15 in}
+	\begin{itemize} \setlength{\itemsep}{2pt}  \setlength{\parskip}{0pt}
+		\item Early Advancement Award, Department of Statistics, UC Irvine (2017)
+		\item University Scholarship, The George Washington University (2014, 2015)
+	\end{itemize}
 }
 
 % The abstract was previously limited to a maximum of 350 words, 
@@ -143,7 +169,13 @@
 % currently does not indicate that there is any word limit for the abstract
 \thesisabstract
 {
-  The abstract of your contribution goes here.
+  Epidemiologists frequently aim to quantify geospatial heterogeneity in disease occurrence to identify relevant hidden health disparities. With the growing prevalence of individual-level point-referenced data, generalized additive models (GAMs) are becoming increasingly popular to map geospatial disease risk patterns while adjusting for confounding effects when the study is a cross-sectional one with an exponential family response. In the meanwhile, local regression smoothers are frequently adopted for spatial effects estimation in GAM framework by researchers partially due to their intuitive ideas and adaptation to changing population density.
+  
+  However, studies with records over a (potentially long) period of time, including those with repeated measurements on subjects, commonly come into play nowadays. For these studies, traditional GAMs could be problematic. Firstly, since data could be recorded over a period of time while spatial risk patterns should not be assumed to be invariant in many cases, statistical tools to access time-varying spatial effects are required. On the other hand, if the study is longitudinally designed, traditional GAMs could lead to incorrect inference due to their incapability of accomodating within-individual correlation. 
+  
+  This dissertation work sought to develop statistical methodologies to address these problems under the GAM framework with kernel smoothers, using local regression smoothers in particular. In Chapter 3, we proposed GAMs with stratified kernel smoothers that could be applied for time-specific spatial effects modeling. Based on the new class of GAMs, we further designed a hypothesis testing procedure to formally detect temporal heterogeneity of spatial effects. In Chapter 4 and 5, we incorporated random effects, as well as kernel smoothers, into GAM, resulting in a class of generalized additive mixed models (GAMMs) with kernel smoothers. We further elaborated the novel fitting and inference procedures for the proposed models.  
+  
+  Relevant empirical results showed the utility and advantages in model fitting under some fairly designed scenarios, with comparison to classic models. We further applied our proposed methods in a study on birth defects in Massachusetts in Chapter 3 and a study on residents' serum PFOA concentration in Lubeck, WV, and Little Hocking, OH region. 
 }
 
 
